tests/suite/snapshots/suite__check__tests__check__bad_override_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_override_1.xi:6:5]
   │
 6 │     foo(a: bool) {}
   ·     ───────┬───────  
   ·            ╰───────── Implementation does not match signature
───╯

